--- a/.gitattributes
+++ b/.gitattributes
@@ -8,14 +8,15 @@
 .gitattributes export-ignore
 .gitignore export-ignore
 COPYING export-ignore
+LICENSE export-ignore
 README.md export-ignore
 icon.png export-ignore
 icon.png.import export-ignore
 icon.svg export-ignore
 icon.svg.import export-ignore
 project.godot export-ignore
-addons/auto-bus/editor_plugin.gd
-addons/auto-bus/plugin.cfg
+addons/auto-bus/editor_plugin.gd export-ignore
+addons/auto-bus/plugin.cfg export-ignore
 addons/auto-bus/icons/SignalNode.svg export-ignore
 addons/auto-bus/icons/SignalNode.svg.import export-ignore
 addons/auto-bus/icons/SignalReceptor.svg export-ignore
