--- a/.gitattributes
+++ b/.gitattributes
@@ -8,8 +8,8 @@
 .gitattributes export-ignore
 .gitignore export-ignore
 COPYING export-ignore
-LICENSE export-ignore
-README.md export-ignore
+/LICENSE export-ignore
+/README.md export-ignore
 icon.png export-ignore
 icon.png.import export-ignore
 icon.svg export-ignore
